# ArmCortexSynth

./: README.md  README_m.swp
AudioGeneration/: AudioMixer.cpp  Oscillator.cpp  Oscillator.h  WaveformTypes.h
AudioOutput/: AudioOutput.h
Documentation/: Tests.md
LCD/: LCD.cpp  LCDOutput.h
MIDI/: MIDIReceiver.cpp
MenuSystem/: Menu.h  MenuItem.h  MenuItemValue.h
ProjectFiles/: .ccsproject  .cproject  .project
Source/: main.cpp
Source/AudioGeneration/: AudioMixer.cpp  AudioMixer.h  NoteFrequencyTable.cpp  NoteFrequencyTable.h  Oscillator.cpp  Oscillator.h
Source/AudioOutput/: AudioOutput.cpp
Source/LCD/: LCD.cpp  LCD.h  LCDOutput.cpp
Source/MIDI/: MIDIReceiver.h
Source/MenuSystem/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuItemValue.h  MenuSystem.cpp  MenuSystem.h
Source/SynthMenu/: OscillatorCent.cpp  OscillatorCent.h  OscillatorLevel.cpp  OscillatorLevel.h  OscillatorSemitone.cpp  OscillatorSemitone.h  OscillatorType.cpp  OscillatorType.h  SynthMenu.cpp  SynthMenu.h  SynthMenuInput.h
Source/TM4C123G/: DMA.cpp  DMA.h  SystemControl.cpp  SystemControl.h  TimedInterrupt.h  tm4c123gh6pm_startup_ccs.c
Source/UARTLogger/: UARTLogger.cpp
Source/Utilities/: FIFO.h  HelperFunctions.cpp  Logger.h  (+3 more)
SynthMenu/: OscillatorCent.h  OscillatorSemitone.cpp  OscillatorSemitone.h  OscillatorType.h  SynthMenuInput.cpp
TM4C123G/: DMA.cpp  SystemControl.cpp  TimedInterrupt.cpp
Tests/: CMakeLists.txt
Tests/AudioGeneration-UT/: AudioGeneration-UT.cpp  CMakeLists.txt  Exception.cpp  Exception.h  FileMatch.cpp  FileMatch.h  FileReader.cpp  FileReader.h  WaveFileWriter.cpp  WaveFileWriter.h
Tests/SynthMenu-UT/: CMakeLists.txt  MenuSystem-UT.cpp  SynthMenuOutput.cpp  SynthMenuOutput.h
UARTLogger/: UARTLogger.cpp  UARTLogger.h
Utilities/: HelperFunctions.h  Logger.cpp  Logger.h  Singleton.h  StringUtilities.cpp
